--- a/carrito-de-la-compra.html
+++ b/carrito-de-la-compra.html
@@ -13,19 +13,8 @@
     
     <!-- Formulario para añadir productos -->
     <div class="form-agregar">
-      <input 
-        type="text" 
-        id="inputNombre" 
-        placeholder="Nombre del producto..."
-        autocomplete="off"
-      >
-      <input 
-        type="number" 
-        id="inputPrecio" 
-        placeholder="Precio..."
-        min="0"
-        step="0.01"
-      >
+      <input type="text" id="inputNombre" placeholder="Nombre del producto..." autocomplete="off">
+      <input type="number" id="inputPrecio" placeholder="Precio..." min="0" step="0.01">
       <button id="btnAgregar">Añadir al carrito</button>
     </div>
 
@@ -41,7 +30,7 @@
   </div>
 
   <footer>
-    <p>Alumno/a: _____________________</p>
+    <p>Alumno/a: Oscar Cerlanga</p>
   </footer>
 
   <script src="script.js"></script>
